--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <!--<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> -->
+    <meta charset="utf-8">    
     <title>Google AA</title>
-	<link rel="shortcut icon" type="image/png" href="images/tabicon.png">
+    <link rel="shortcut icon" type="image/png" href="images/tabicon.png">
     <link href="styles/style.css" rel="stylesheet">
   </head>  
   <header>
 	<ul class="UpperLinks">
 		<li id="righties" style="margin-right:10px"><button id="SignIn"><b>Sign In</b></button></li>
 		<li id="righties" style="margin-right:10px; margin-top:7px;"><img style="height: 20px; width: 20px;" src="images/9squares.png" alt="Les 9 points pour les autres app. de Google"></li>
-	    <li id="righties" style="margin-right:10px"><a href="https://www.google.ca/imghp?hl=en&amp;tab=wi&amp;ogbl">Images</a></li>
+	        <li id="righties" style="margin-right:10px"><a href="https://www.google.ca/imghp?hl=en&amp;tab=wi&amp;ogbl">Images</a></li>
 		<li id="righties" style="margin-right:10px"><a href="https://mail.google.com/mail/?tab=wm&amp;ogbl">Gmail</a></li>
 		<li id="lefties" style="margin-left:10px"><a href="https://about.google/?fg=1&amp;utm_source=google-CA&amp;utm_medium=referral&amp;utm_campaign=hp-header">About</a></li>
 		<li id="lefties" style="margin-left:20px"><a href="https://store.google.com/CA?utm_source=hp_header&amp;utm_medium=google_ooo&amp;utm_campaign=GS100042&amp;hl=en-CA">Store</a></li>
@@ -21,11 +20,8 @@
 	  <img id="LogoGoogle" src="images/GoogleLogo.png" alt="Logo de Google"> 
 	  <form><input type="text" class="SearchBar"></form>
 	  <div id="bouttonsUnderSearch" align="center"><button type="submit">Google Search</button> &nbsp; <button>I'm Feeling Lucky</button></div>
-	  <p align="center">Google offered in : <a style="color: blue;">Français</a></p>
-	  
-	  <div id="OverFooter">
-		<p style="margin-top: 1px; padding-left:10px;">Canada</p>	  
-	  </div>
+	  <p align="center">Google offered in : <a style="color: blue;">Français</a></p>	  
+	  <div id="OverFooter"><p style="margin-top: 1px; padding-left:10px;">Canada</p></div>
   </body>
   <footer>
     <ul class="BottomLinks">
@@ -35,6 +31,6 @@
 		<li id="lefties" style="margin-left:10px"><a href="https://ads.google.com/intl/en_ca/home/">Advertising</a></li>
 		<li id="lefties" style="margin-left:20px"><a href="https://smallbusiness.withgoogle.com/intl/en_ca/">Business</a></li>
 		<li id="lefties" style="margin-left:20px"><a href="https://www.google.com/search/howsearchworks/?fg=1">How Search works</a></li>
-	</ul>
+    </ul>
   </footer>
 </html> 
